For 1.20.0:
	- changed routing to nodes. with an eventIn the same as an internal field. (eg,
	  Extrusion set_spine and spine). Now these fields are handled before eventloop runs.

	- Javascript field initialization bug - (memory allocation problem) fixed.

	- Linux MIDI code added.

	- SpotLight - bounds checking on some parameters added.

	- OcclusionQueries code revisited so that un-rendered Shape nodes (eg, in Switch statements)
	  do not generate OpenGL errors.

For 1.19.9:
	- Anchors were coded as being "sibling-sensitive" - this has been
	  changed, as they are not. This was causing problems where 2 Anchors were
	  within the same Scene Graph grouping node.

	- potential buffer overflow problem resolved in Anchor node. 
	  see:http://www.securityfocus.com/archive/1/473187

For 1.19.8:
	- Javascript was not thread-safe; should be ok now.

	- Javascript/PROTO MF*nodes also had problems with routing; fixed. (see next fix, below)

	- ROUTE bug for some MF* nodes was fixed in 1.19.7, but fix was edited out
	  from CParseParser.c; re-applied.

	- add/removeChildren routing now done before Scenegraph renders, rather than trying to
	  second guess routes in CRoutes_Register.

	- TouchSensor bug (where the javascript sphere box test would fail) fixed.

For 1.19.7:

	- Javascript MFNode work - should be ok now??

	- work on mouse-sensitive nodes; when they are disabled, mouse does not
	  change shape, and nodes are ignored. Works dynamically; scene graph
	  is pruned when sensitive nodes become disabled.

	- Classic VRML parser routing work.

	- fixed (linux) snapshot arguments in CFrontEnd/fwopts.c 

	- EXTERNPROTOS should be working in "classic" VRML Parser

	- PROTO IS fields now can be nested, and now work properly with SCRIPTS 

	- use GL_ARB_occlusion_query for visibility culling, and VisibilitySensors.
	  Computers that do not have GL_ARB_occlusion_query will not have a 
	  functioning VisibilitySensor.

	- Mipmap textures (PixelTexture and ImageTexture only)
